# libdilithium

./: CMakeLists.txt  README.md  deps.sh
mini_verify/: CMakeLists.txt  poly.c  polyvec.h  sign.c
mini_verify/test/: CMakeLists.txt  test_pem.c
src/: CMakeLists.txt
test/: CMakeLists.txt  test_dilithium.c  test_sign.c
test/benchmark/: cpucycles.h  speed_print.c  test_sign_bench.c
test/pem/: test_mldsa.py  test_mldsa65.py  test_mldsa87.py  test_pem.c
test/pem/pem44/: prkey.pem  pubkey.pem
test/pem/pem65/: prkey.pem  pubkey.pem
test/pem/pem87/: prkey.pem  pubkey.pem
